Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96630

MenuItem mnemonic shortcut not triggered

    XMLWordPrintable

Details

    • 520c8ab14 (dev), 6f4370b51 (6.8), e1ad73a0b (6.7), 9bae744f6 (tqtc/lts-6.5)

    Description

      The Menu's F shortcut is triggered, but not the MenuItem's X shortcut.

      import QtQuick
      import QtQuick.Controls
      import Qt.labs.platform as Platform
      
      ApplicationWindow {
          id: window
          width: 640
          height: 480
          visible: true
       
          menuBar: MenuBar {
              property Platform.FileDialog fileDialog
              
              Menu {
                  id: fileMenu
                  title: qsTr("&File")
                  
                  MenuItem {
                      objectName: "openMenuItem"
                      text: qsTr("Open")
                      onTriggered: fileDialog.open()
                  }
                  
                  MenuSeparator {}
                  
                  MenuItem {
                      objectName: "quitMenuItem"
                      text: qsTr("E&xit")
                      onTriggered: Qt.quit()
                  }
              }
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-96630
        # Subject Branch Project Status CR V

        Activity

          People

            mhqanbari MohammadHossein Qanbari
            mitch_curtis Mitch Curtis
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: